Add value and due date to document
