# src/config/openapi.json
@@ -200,6 +200,12 @@
 					"description": {
 						"type": "string"
 					},
+					"dueDate": {
+						"type": "Date"
+					},
+					"value": {
+						"type": "number"
+					},
 					"clientId": {
 						"type": "string"
 					},
